--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Portfolio</div>
+      <div class="logo">Final Requirements</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -95,7 +95,7 @@
         />
     </section>
     <section id="interest">
-        <p class="section__text__p1">Interest</p>
+       
         <h1 class="title">Interest</h1>
         <div class="interest-details-container">
           <div class="about-containers">
